--- a/untitled.html
+++ b/untitled.html
@@ -90,7 +90,7 @@
         <div class="d hx hf gu gallery-item gallery-expand ce polygon">
           <div class="gallery-curve-wrapper">
             <a class="gallery-cover gray">
-              <img class="responsive-img" src="collegeDays/IMG_20170304_132822.jpg" alt="placeholder" crossOrigin="anonymous">
+              <img class="responsive-img" src="IMG_20170304_132822.jpg" alt="placeholder" crossOrigin="anonymous">
             </a>
             <div class="gallery-body">
               <div class="title-wrapper">
