--- a/untitled.html
+++ b/untitled.html
@@ -95,12 +95,12 @@
             <div class="gallery-body">
               <div class="title-wrapper">
                 <h3>Aquamarine</h3>
-                <span class="gj">$29.99</span>
+<!--                 <span class="gj">$29.99</span> -->
               </div>
               <p class="fi">
-Literally venmo before they sold out, DIY heirloom forage polaroid offal yr pop-up selfies health goth. Typewriter scenester hammock truffaut meditation, squid before they sold out polaroid portland tousled taxidermy vice. Listicle butcher thundercats, taxidermy pitchfork next level roof party crucifix narwhal kinfolk you probably haven't heard of them portland small batch.</p>
+Remember those days when we were together all the time. No missing each other, No worries of waiting to see each other next. Ya, How can I forget these memories? These were the days where our love maybe not love but we came close to each other. Those late night talks, and teasing by our friends by shouting my name when u enter the class and shouting your name when I enter the class.  I know I used to be super awkward, but thanks to them, maybe they are one of the reasons we are together.  The first dare, of going somewhere and spending the entire night with each other. Really from where did we get all dose ideas from? we were really mad in friendship right. </p>
               <p class="fi">
-Ea salvia adipisicing vegan man bun. Flexitarian cupidatat skateboard flannel. Drinking vinegar marfa you probably haven't heard of them consequat post-ironic, shabby chic williamsburg raclette vaporware readymade selfies brunch. Venmo selvage biodiesel marfa. Tbh literally 3 wolf moon, proident elit raclette chambray consequat edison bulb four loko accusamus. Semiotics godard eiusmod, ex esse air plant quinoa vaporware selfies keytar. Actually yuccie ennui flannel single-origin coffee, williamsburg cardigan banjo forage pug distillery tumblr hexagon vinyl occaecat.</p>
+Remember the farewell night and the next day we headed to puri again, ya we had a lot of dispute rather I had . But those were the best time I would have ever spent with someone. Ya I know we had to head back from our dream world to the reality. And the time of parting. Do u Remeber u had chucked down almost a bottle of beer? OH MY GOD!!. U are such a drunker. That weirdo face pic of yours, remember in the terrace and probably the day before we were to live for puri after our farewell. Chiranjit, Me, You, and Sonali too. I really wanted to say how special u are but I just don't know why i didn't at that time. Maybe because we were getting apart and in some corner of my mind I had this perception that maybe we would ever meet again.  But u changed everything. I love you, my baby.</p>
 
               <div class="carousel-wrapper">
                 <div class="t carousel">
