--- a/untitled.html
+++ b/untitled.html
@@ -67,9 +67,9 @@
         <div class="categories-container">
           <ul class="categories db">
             <!-- <li class="k"><a href="#all">All</a></li> -->
-            <li><a href="#polygon">College Days</a></li>
-            <li><a href="#bigbang">Job Life</a></li>
-            <li><a href="#sacred">After 2 years</a></li>
+<!--             <li><a href="#polygon">College Days</a></li> -->
+<!--             <li><a href="#bigbang">Job Life</a></li> -->
+<!--             <li><a href="#sacred">After 2 years</a></li> -->
           </ul>
         </div>
       </div>
