--- a/untitled.html
+++ b/untitled.html
@@ -302,7 +302,7 @@ My strong super girl, who didnt knew how to eat of her own ,  was going to lead 
         <div class="d hx hf gu gallery-item gallery-expand ce bigbang">
           <div class="gallery-curve-wrapper">
             <a class="gallery-cover gray">
-              <img class="9.jpg" alt="placeholder" crossOrigin="anonymous">
+              <img class="responsive-img" src="9.jpg" alt="placeholder" crossOrigin="anonymous">
             </a>
             <div class="gallery-body">
               <div class="title-wrapper">
