--- a/untitled.html
+++ b/untitled.html
@@ -363,17 +363,17 @@ Baby, I know the last meet that was not as great as the previous ones, we quarre
         <div class="d hx hf gu gallery-item gallery-expand ce sacred">
           <div class="gallery-curve-wrapper">
             <a class="gallery-cover gray">
-              <img class="responsive-img" src="https://cdn.shopify.com/s/files/1/1775/8583/t/1/assets/sacredgeometry1.jpg?0" alt="placeholder" crossOrigin="anonymous">
+              <img class="responsive-img" src="18.jpg" alt="placeholder" crossOrigin="anonymous">
             </a>
             <div class="gallery-body">
               <div class="title-wrapper">
-                <h3>Circle</h3>
-                <span class="gj">$10.99</span>
+                <h3>Loveliest Couple Ever</h3>
+<!--                 <span class="gj">$10.99</span> -->
               </div>
               <p class="fi">
-Literally venmo before they sold out, DIY heirloom forage polaroid offal yr pop-up selfies health goth. Typewriter scenester hammock truffaut meditation, squid before they sold out polaroid portland tousled taxidermy vice. Listicle butcher thundercats, taxidermy pitchfork next level roof party crucifix narwhal kinfolk you probably haven't heard of them portland small batch.</p>
-              <p class="fi">
-Ea salvia adipisicing vegan man bun. Flexitarian cupidatat skateboard flannel. Drinking vinegar marfa you probably haven't heard of them consequat post-ironic, shabby chic williamsburg raclette vaporware readymade selfies brunch. Venmo selvage biodiesel marfa. Tbh literally 3 wolf moon, proident elit raclette chambray consequat edison bulb four loko accusamus. Semiotics godard eiusmod, ex esse air plant quinoa vaporware selfies keytar. Actually yuccie ennui flannel single-origin coffee, williamsburg cardigan banjo forage pug distillery tumblr hexagon vinyl occaecat.</p>
+Hayee Pic Dekhuchu ta kete awesome laguchu ame dita janka. Full on . This  is during the durga Puja time right!! we both went to meet our friends. And our first ever car trip. Dekhilu Ta kete bhalsare chaleidiye mun car, Khali comment mariba. But It is really an awesome pic. Ya , ididnt dropeed u home u got sad, Baby i know u expected me to do things , but sometime i just cant even i wanted to . May be i just strt thinking like what will happen if .. argh i just dont know gelhu kan heijae.. But baba i know , i will surely get over these two sided wala thinking jinsa , love u muuuuaaaaaaaahhh</p>
+<!--               <p class="fi"> -->
+<!-- Ea salvia adipisicing vegan man bun. Flexitarian cupidatat skateboard flannel. Drinking vinegar marfa you probably haven't heard of them consequat post-ironic, shabby chic williamsburg raclette vaporware readymade selfies brunch. Venmo selvage biodiesel marfa. Tbh literally 3 wolf moon, proident elit raclette chambray consequat edison bulb four loko accusamus. Semiotics godard eiusmod, ex esse air plant quinoa vaporware selfies keytar. Actually yuccie ennui flannel single-origin coffee, williamsburg cardigan banjo forage pug distillery tumblr hexagon vinyl occaecat.</p> -->
 
               <div class="carousel-wrapper">
                 <div class="t carousel">
