--- a/untitled.html
+++ b/untitled.html
@@ -391,7 +391,7 @@ Hayee Pic Dekhuchu ta kete awesome laguchu ame dita janka. Full on . This  is du
           </div>
         </div>
 
-        <div class="d hx hf gu gallery-item gallery-expand ce sacred">
+<!--         <div class="d hx hf gu gallery-item gallery-expand ce sacred">
           <div class="gallery-curve-wrapper">
             <a class="gallery-cover gray">
               <img class="responsive-img" src="https://cdn.shopify.com/s/files/1/1775/8583/t/1/assets/sacredgeometry2.jpg?0" alt="placeholder" crossOrigin="anonymous">
@@ -451,7 +451,7 @@ Ea salvia adipisicing vegan man bun. Flexitarian cupidatat skateboard flannel. D
               <a class="btn-floating btn-large waves-effect waves-light"><i class="material-icons">favorite</i></a>
             </div>
           </div>
-        </div>
+        </div> -->
 
       </div>
 
