--- a/untitled.html
+++ b/untitled.html
@@ -37,7 +37,7 @@
         <div class="ea k" style="background-image: url('https://cdn.shopify.com/s/files/1/1775/8583/t/1/assets/stars.jpg?0');"></div>
       </div>
       <div class="nav-wrapper db">
-        <a href="/pages/demo" class="brand-logo"><i class="material-icons">camera</i>Memories</a>
+        <a  class="brand-logo"><i class="material-icons">camera</i>Memories</a>
         <!-- <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a> -->
         <ul class="bt hide-on-med-and-down">
         </ul>
@@ -391,20 +391,20 @@ Hayee Pic Dekhuchu ta kete awesome laguchu ame dita janka. Full on . This  is du
           </div>
         </div>
 
-<!--         <div class="d hx hf gu gallery-item gallery-expand ce sacred">
+         <div class="d hx hf gu gallery-item gallery-expand ce sacred">
           <div class="gallery-curve-wrapper">
             <a class="gallery-cover gray">
-              <img class="responsive-img" src="https://cdn.shopify.com/s/files/1/1775/8583/t/1/assets/sacredgeometry2.jpg?0" alt="placeholder" crossOrigin="anonymous">
+              <img class="responsive-img" src="19.jpg" alt="placeholder" crossOrigin="anonymous">
             </a>
             <div class="gallery-body">
               <div class="title-wrapper">
-                <h3>Triangle</h3>
-                <span class="gj">$10.99</span>
+                <h3>Final Message</h3>
+<!--                 <span class="gj">$10.99</span> -->
               </div>
               <p class="fi">
-Literally venmo before they sold out, DIY heirloom forage polaroid offal yr pop-up selfies health goth. Typewriter scenester hammock truffaut meditation, squid before they sold out polaroid portland tousled taxidermy vice. Listicle butcher thundercats, taxidermy pitchfork next level roof party crucifix narwhal kinfolk you probably haven't heard of them portland small batch.</p>
-              <p class="fi">
-Ea salvia adipisicing vegan man bun. Flexitarian cupidatat skateboard flannel. Drinking vinegar marfa you probably haven't heard of them consequat post-ironic, shabby chic williamsburg raclette vaporware readymade selfies brunch. Venmo selvage biodiesel marfa. Tbh literally 3 wolf moon, proident elit raclette chambray consequat edison bulb four loko accusamus. Semiotics godard eiusmod, ex esse air plant quinoa vaporware selfies keytar. Actually yuccie ennui flannel single-origin coffee, williamsburg cardigan banjo forage pug distillery tumblr hexagon vinyl occaecat.</p>
+Baby, I really wanted to make your my love's birthday the much special, I just don't know what happened. How all these quarrels started up and we ended up fighting with each other. I know it is one of the special days, and i should not have behaved the way I have. I m really sorry for all the doings that I had done, Baby trust me I m really sorry from the bottom of my heart. Ya, I just wanted to make one disclosure, and that is I have been behaving rudely with u, not rude actually !! but kind of ignoring u because I wanted to gift u something special on this day. This idea just struck into my mind in the afternoon and thought of working on it. So all the stories that are being made up about me being busy are nothing but working on this gift of yours. I just don't know if u like it or not, the thing is I just felt like sharing all of the memories that we had till now in a bundle to you and let u know how special u are to me and baby, trust me I care for u a lot. I know i really behaved rudely in the evening and even now also. I cut the call baba, I really wanted to complete this and gift u as soon as possible. I am really really really really sorry for being so mean and rude to u. Baby, please na forgive me na!!... I really really really really really love u a lot. More than a lot. </p>
+<!--               <p class="fi"> -->
+<!-- Ea salvia adipisicing vegan man bun. Flexitarian cupidatat skateboard flannel. Drinking vinegar marfa you probably haven't heard of them consequat post-ironic, shabby chic williamsburg raclette vaporware readymade selfies brunch. Venmo selvage biodiesel marfa. Tbh literally 3 wolf moon, proident elit raclette chambray consequat edison bulb four loko accusamus. Semiotics godard eiusmod, ex esse air plant quinoa vaporware selfies keytar. Actually yuccie ennui flannel single-origin coffee, williamsburg cardigan banjo forage pug distillery tumblr hexagon vinyl occaecat.</p> -->
 
               <div class="carousel-wrapper">
                 <div class="t carousel">
@@ -422,7 +422,7 @@ Ea salvia adipisicing vegan man bun. Flexitarian cupidatat skateboard flannel. D
           </div>
         </div>
 
-        <div class="d hx hf gu gallery-item gallery-expand ce sacred">
+<!--         <div class="d hx hf gu gallery-item gallery-expand ce sacred"> 
           <div class="gallery-curve-wrapper">
             <a class="gallery-cover gray">
               <img class="responsive-img" src="https://cdn.shopify.com/s/files/1/1775/8583/t/1/assets/sacredgeometry3.jpg?0" alt="placeholder" crossOrigin="anonymous">
