--- a/untitled.html
+++ b/untitled.html
@@ -103,13 +103,13 @@ Remember those days when we were together all the time. No missing each other, N
 <!-- Remember the farewell night and the next day we headed to puri again, ya we had a lot of dispute rather I had . But those were the best time I would have ever spent with someone. Ya I know we had to head back from our dream world to the reality. And the time of parting. Do u Remeber u had chucked down almost a bottle of beer? OH MY GOD!!. U are such a drunker. That weirdo face pic of yours, remember in the terrace and probably the day before we were to live for puri after our farewell. Chiranjit, Me, You, and Sonali too. I really wanted to say how special u are but I just don't know why i didn't at that time. Maybe because we were getting apart and in some corner of my mind I had this perception that maybe we would ever meet again.  But u changed everything. I love you, my baby.</p> -->
 
               <div class="carousel-wrapper">
-                <div class="t carousel">
+<!--                 <div class="t carousel">
                   <a class="carousel-item" href="#one!"><img src="https://cdn.shopify.com/s/files/1/1775/8583/t/1/assets/geometric-sun.jpg?0" crossOrigin="anonymous"></a>
                   <a class="carousel-item" href="#two!"><img src="https://cdn.shopify.com/s/files/1/1775/8583/t/1/assets/geometric-maze.jpg?0" crossOrigin="anonymous"></a>
                   <a class="carousel-item" href="#three!"><img src="https://cdn.shopify.com/s/files/1/1775/8583/t/1/assets/geometric-ice.jpg?0" crossOrigin="anonymous"></a>
                   <a class="carousel-item" href="#four!"><img src="https://cdn.shopify.com/s/files/1/1775/8583/t/1/assets/geometric-cave.jpg?0" crossOrigin="anonymous"></a>
                   <a class="carousel-item" href="#five!"><img src="https://cdn.shopify.com/s/files/1/1775/8583/t/1/assets/geometric-grapefruit.jpg?0" crossOrigin="anonymous"></a>
-                </div>
+                </div> -->
               </div>
             </div>
             <div class="gallery-action">
