--- a/untitled.html
+++ b/untitled.html
@@ -133,13 +133,13 @@ As u would have guessed from the caption itself, but still I will remind u of th
 <!-- Ea salvia adipisicing vegan man bun. Flexitarian cupidatat skateboard flannel. Drinking vinegar marfa you probably haven't heard of them consequat post-ironic, shabby chic williamsburg raclette vaporware readymade selfies brunch. Venmo selvage biodiesel marfa. Tbh literally 3 wolf moon, proident elit raclette chambray consequat edison bulb four loko accusamus. Semiotics godard eiusmod, ex esse air plant quinoa vaporware selfies keytar. Actually yuccie ennui flannel single-origin coffee, williamsburg cardigan banjo forage pug distillery tumblr hexagon vinyl occaecat.</p> -->
 
               <div class="carousel-wrapper">
-                <div class="t carousel">
+<!--                 <div class="t carousel">
                   <a class="carousel-item" href="#one!"><img src="https://cdn.shopify.com/s/files/1/1775/8583/t/1/assets/geometric-sun.jpg?0" crossOrigin="anonymous"></a>
                   <a class="carousel-item" href="#two!"><img src="https://cdn.shopify.com/s/files/1/1775/8583/t/1/assets/geometric-maze.jpg?0" crossOrigin="anonymous"></a>
                   <a class="carousel-item" href="#three!"><img src="https://cdn.shopify.com/s/files/1/1775/8583/t/1/assets/geometric-ice.jpg?0" crossOrigin="anonymous"></a>
                   <a class="carousel-item" href="#four!"><img src="https://cdn.shopify.com/s/files/1/1775/8583/t/1/assets/geometric-cave.jpg?0" crossOrigin="anonymous"></a>
                   <a class="carousel-item" href="#five!"><img src="https://cdn.shopify.com/s/files/1/1775/8583/t/1/assets/geometric-grapefruit.jpg?0" crossOrigin="anonymous"></a>
-                </div>
+                </div> -->
               </div>
             </div>
             <div class="gallery-action">
@@ -163,13 +163,13 @@ Ya, The last minute asking u out for lunch, during our last days in college. Rem
 <!-- Ea salvia adipisicing vegan man bun. Flexitarian cupidatat skateboard flannel. Drinking vinegar marfa you probably haven't heard of them consequat post-ironic, shabby chic williamsburg raclette vaporware readymade selfies brunch. Venmo selvage biodiesel marfa. Tbh literally 3 wolf moon, proident elit raclette chambray consequat edison bulb four loko accusamus. Semiotics godard eiusmod, ex esse air plant quinoa vaporware selfies keytar. Actually yuccie ennui flannel single-origin coffee, williamsburg cardigan banjo forage pug distillery tumblr hexagon vinyl occaecat.</p> -->
 
               <div class="carousel-wrapper">
-                <div class="t carousel">
+<!--                 <div class="t carousel">
                   <a class="carousel-item" href="#one!"><img src="https://cdn.shopify.com/s/files/1/1775/8583/t/1/assets/geometric-sun.jpg?0" crossOrigin="anonymous"></a>
                   <a class="carousel-item" href="#two!"><img src="https://cdn.shopify.com/s/files/1/1775/8583/t/1/assets/geometric-maze.jpg?0" crossOrigin="anonymous"></a>
                   <a class="carousel-item" href="#three!"><img src="https://cdn.shopify.com/s/files/1/1775/8583/t/1/assets/geometric-ice.jpg?0" crossOrigin="anonymous"></a>
                   <a class="carousel-item" href="#four!"><img src="https://cdn.shopify.com/s/files/1/1775/8583/t/1/assets/geometric-cave.jpg?0" crossOrigin="anonymous"></a>
                   <a class="carousel-item" href="#five!"><img src="https://cdn.shopify.com/s/files/1/1775/8583/t/1/assets/geometric-grapefruit.jpg?0" crossOrigin="anonymous"></a>
-                </div>
+                </div> -->
               </div>
             </div>
             <div class="gallery-action">
@@ -193,13 +193,13 @@ Remember the farewell night's next day we headed to puri again, ya we had a lot 
 <!-- Ea salvia adipisicing vegan man bun. Flexitarian cupidatat skateboard flannel. Drinking vinegar marfa you probably haven't heard of them consequat post-ironic, shabby chic williamsburg raclette vaporware readymade selfies brunch. Venmo selvage biodiesel marfa. Tbh literally 3 wolf moon, proident elit raclette chambray consequat edison bulb four loko accusamus. Semiotics godard eiusmod, ex esse air plant quinoa vaporware selfies keytar. Actually yuccie ennui flannel single-origin coffee, williamsburg cardigan banjo forage pug distillery tumblr hexagon vinyl occaecat.</p> -->
 
               <div class="carousel-wrapper">
-                <div class="t carousel">
+<!--                 <div class="t carousel">
                   <a class="carousel-item" href="#one!"><img src="https://cdn.shopify.com/s/files/1/1775/8583/t/1/assets/geometric-sun.jpg?0" crossOrigin="anonymous"></a>
                   <a class="carousel-item" href="#two!"><img src="https://cdn.shopify.com/s/files/1/1775/8583/t/1/assets/geometric-maze.jpg?0" crossOrigin="anonymous"></a>
                   <a class="carousel-item" href="#three!"><img src="https://cdn.shopify.com/s/files/1/1775/8583/t/1/assets/geometric-ice.jpg?0" crossOrigin="anonymous"></a>
                   <a class="carousel-item" href="#four!"><img src="https://cdn.shopify.com/s/files/1/1775/8583/t/1/assets/geometric-cave.jpg?0" crossOrigin="anonymous"></a>
                   <a class="carousel-item" href="#five!"><img src="https://cdn.shopify.com/s/files/1/1775/8583/t/1/assets/geometric-grapefruit.jpg?0" crossOrigin="anonymous"></a>
-                </div>
+                </div> -->
               </div>
             </div>
             <div class="gallery-action">
@@ -223,13 +223,13 @@ Ya, Afterall we were locked in the room as per your instructions, so this is one
 <!-- Ea salvia adipisicing vegan man bun. Flexitarian cupidatat skateboard flannel. Drinking vinegar marfa you probably haven't heard of them consequat post-ironic, shabby chic williamsburg raclette vaporware readymade selfies brunch. Venmo selvage biodiesel marfa. Tbh literally 3 wolf moon, proident elit raclette chambray consequat edison bulb four loko accusamus. Semiotics godard eiusmod, ex esse air plant quinoa vaporware selfies keytar. Actually yuccie ennui flannel single-origin coffee, williamsburg cardigan banjo forage pug distillery tumblr hexagon vinyl occaecat.</p> -->
 
               <div class="carousel-wrapper">
-                <div class="t carousel">
+<!--                 <div class="t carousel">
                   <a class="carousel-item" href="#one!"><img src="https://cdn.shopify.com/s/files/1/1775/8583/t/1/assets/geometric-sun.jpg?0" crossOrigin="anonymous"></a>
                   <a class="carousel-item" href="#two!"><img src="https://cdn.shopify.com/s/files/1/1775/8583/t/1/assets/geometric-maze.jpg?0" crossOrigin="anonymous"></a>
                   <a class="carousel-item" href="#three!"><img src="https://cdn.shopify.com/s/files/1/1775/8583/t/1/assets/geometric-ice.jpg?0" crossOrigin="anonymous"></a>
                   <a class="carousel-item" href="#four!"><img src="https://cdn.shopify.com/s/files/1/1775/8583/t/1/assets/geometric-cave.jpg?0" crossOrigin="anonymous"></a>
                   <a class="carousel-item" href="#five!"><img src="https://cdn.shopify.com/s/files/1/1775/8583/t/1/assets/geometric-grapefruit.jpg?0" crossOrigin="anonymous"></a>
-                </div>
+                </div> -->
               </div>
             </div>
             <div class="gallery-action">
@@ -253,13 +253,13 @@ Thought that this was the last meet. Remember we even went to the KFC kitchen to
 <!-- Ea salvia adipisicing vegan man bun. Flexitarian cupidatat skateboard flannel. Drinking vinegar marfa you probably haven't heard of them consequat post-ironic, shabby chic williamsburg raclette vaporware readymade selfies brunch. Venmo selvage biodiesel marfa. Tbh literally 3 wolf moon, proident elit raclette chambray consequat edison bulb four loko accusamus. Semiotics godard eiusmod, ex esse air plant quinoa vaporware selfies keytar. Actually yuccie ennui flannel single-origin coffee, williamsburg cardigan banjo forage pug distillery tumblr hexagon vinyl occaecat.</p> -->
 
               <div class="carousel-wrapper">
-                <div class="t carousel">
+<!--                 <div class="t carousel">
                   <a class="carousel-item" href="#one!"><img src="https://cdn.shopify.com/s/files/1/1775/8583/t/1/assets/geometric-sun.jpg?0" crossOrigin="anonymous"></a>
                   <a class="carousel-item" href="#two!"><img src="https://cdn.shopify.com/s/files/1/1775/8583/t/1/assets/geometric-maze.jpg?0" crossOrigin="anonymous"></a>
                   <a class="carousel-item" href="#three!"><img src="https://cdn.shopify.com/s/files/1/1775/8583/t/1/assets/geometric-ice.jpg?0" crossOrigin="anonymous"></a>
                   <a class="carousel-item" href="#four!"><img src="https://cdn.shopify.com/s/files/1/1775/8583/t/1/assets/geometric-cave.jpg?0" crossOrigin="anonymous"></a>
                   <a class="carousel-item" href="#five!"><img src="https://cdn.shopify.com/s/files/1/1775/8583/t/1/assets/geometric-grapefruit.jpg?0" crossOrigin="anonymous"></a>
-                </div>
+                </div> -->
               </div>
             </div>
             <div class="gallery-action">
@@ -284,13 +284,13 @@ My strong super girl, who didnt knew how to eat of her own ,  was going to lead 
 <!-- Ea salvia adipisicing vegan man bun. Flexitarian cupidatat skateboard flannel. Drinking vinegar marfa you probably haven't heard of them consequat post-ironic, shabby chic williamsburg raclette vaporware readymade selfies brunch. Venmo selvage biodiesel marfa. Tbh literally 3 wolf moon, proident elit raclette chambray consequat edison bulb four loko accusamus. Semiotics godard eiusmod, ex esse air plant quinoa vaporware selfies keytar. Actually yuccie ennui flannel single-origin coffee, williamsburg cardigan banjo forage pug distillery tumblr hexagon vinyl occaecat.</p> -->
 
               <div class="carousel-wrapper">
-                <div class="t carousel">
+<!--                 <div class="t carousel">
                   <a class="carousel-item" href="#one!"><img src="https://cdn.shopify.com/s/files/1/1775/8583/t/1/assets/geometric-sun.jpg?0" crossOrigin="anonymous"></a>
                   <a class="carousel-item" href="#two!"><img src="https://cdn.shopify.com/s/files/1/1775/8583/t/1/assets/geometric-maze.jpg?0" crossOrigin="anonymous"></a>
                   <a class="carousel-item" href="#three!"><img src="https://cdn.shopify.com/s/files/1/1775/8583/t/1/assets/geometric-ice.jpg?0" crossOrigin="anonymous"></a>
                   <a class="carousel-item" href="#four!"><img src="https://cdn.shopify.com/s/files/1/1775/8583/t/1/assets/geometric-cave.jpg?0" crossOrigin="anonymous"></a>
                   <a class="carousel-item" href="#five!"><img src="https://cdn.shopify.com/s/files/1/1775/8583/t/1/assets/geometric-grapefruit.jpg?0" crossOrigin="anonymous"></a>
-                </div>
+                </div> -->
               </div>
 
             </div>
@@ -315,13 +315,13 @@ The first time we met after ur visit to Odisha after ur job. I must tell u were 
 <!-- Ea salvia adipisicing vegan man bun. Flexitarian cupidatat skateboard flannel. Drinking vinegar marfa you probably haven't heard of them consequat post-ironic, shabby chic williamsburg raclette vaporware readymade selfies brunch. Venmo selvage biodiesel marfa. Tbh literally 3 wolf moon, proident elit raclette chambray consequat edison bulb four loko accusamus. Semiotics godard eiusmod, ex esse air plant quinoa vaporware selfies keytar. Actually yuccie ennui flannel single-origin coffee, williamsburg cardigan banjo forage pug distillery tumblr hexagon vinyl occaecat.</p> -->
 
               <div class="carousel-wrapper">
-                <div class="t carousel">
+<!--                 <div class="t carousel">
                   <a class="carousel-item" href="#one!"><img src="https://cdn.shopify.com/s/files/1/1775/8583/t/1/assets/geometric-sun.jpg?0" crossOrigin="anonymous"></a>
                   <a class="carousel-item" href="#two!"><img src="https://cdn.shopify.com/s/files/1/1775/8583/t/1/assets/geometric-maze.jpg?0" crossOrigin="anonymous"></a>
                   <a class="carousel-item" href="#three!"><img src="https://cdn.shopify.com/s/files/1/1775/8583/t/1/assets/geometric-ice.jpg?0" crossOrigin="anonymous"></a>
                   <a class="carousel-item" href="#four!"><img src="https://cdn.shopify.com/s/files/1/1775/8583/t/1/assets/geometric-cave.jpg?0" crossOrigin="anonymous"></a>
                   <a class="carousel-item" href="#five!"><img src="https://cdn.shopify.com/s/files/1/1775/8583/t/1/assets/geometric-grapefruit.jpg?0" crossOrigin="anonymous"></a>
-                </div>
+                </div> -->
               </div>
             </div>
             <div class="gallery-action">
@@ -345,13 +345,13 @@ Baby, I know the last meet that was not as great as the previous ones, we quarre
 <!-- Ea salvia adipisicing vegan man bun. Flexitarian cupidatat skateboard flannel. Drinking vinegar marfa you probably haven't heard of them consequat post-ironic, shabby chic williamsburg raclette vaporware readymade selfies brunch. Venmo selvage biodiesel marfa. Tbh literally 3 wolf moon, proident elit raclette chambray consequat edison bulb four loko accusamus. Semiotics godard eiusmod, ex esse air plant quinoa vaporware selfies keytar. Actually yuccie ennui flannel single-origin coffee, williamsburg cardigan banjo forage pug distillery tumblr hexagon vinyl occaecat.</p> -->
 
               <div class="carousel-wrapper">
-                <div class="t carousel">
+<!--                 <div class="t carousel">
                   <a class="carousel-item" href="#one!"><img src="https://cdn.shopify.com/s/files/1/1775/8583/t/1/assets/geometric-sun.jpg?0" crossOrigin="anonymous"></a>
                   <a class="carousel-item" href="#two!"><img src="https://cdn.shopify.com/s/files/1/1775/8583/t/1/assets/geometric-maze.jpg?0" crossOrigin="anonymous"></a>
                   <a class="carousel-item" href="#three!"><img src="https://cdn.shopify.com/s/files/1/1775/8583/t/1/assets/geometric-ice.jpg?0" crossOrigin="anonymous"></a>
                   <a class="carousel-item" href="#four!"><img src="https://cdn.shopify.com/s/files/1/1775/8583/t/1/assets/geometric-cave.jpg?0" crossOrigin="anonymous"></a>
                   <a class="carousel-item" href="#five!"><img src="https://cdn.shopify.com/s/files/1/1775/8583/t/1/assets/geometric-grapefruit.jpg?0" crossOrigin="anonymous"></a>
-                </div>
+                </div> -->
               </div>
             </div>
             <div class="gallery-action">
@@ -376,13 +376,13 @@ Hayee Pic Dekhuchu ta kete awesome laguchu ame dita janka. Full on . This  is du
 <!-- Ea salvia adipisicing vegan man bun. Flexitarian cupidatat skateboard flannel. Drinking vinegar marfa you probably haven't heard of them consequat post-ironic, shabby chic williamsburg raclette vaporware readymade selfies brunch. Venmo selvage biodiesel marfa. Tbh literally 3 wolf moon, proident elit raclette chambray consequat edison bulb four loko accusamus. Semiotics godard eiusmod, ex esse air plant quinoa vaporware selfies keytar. Actually yuccie ennui flannel single-origin coffee, williamsburg cardigan banjo forage pug distillery tumblr hexagon vinyl occaecat.</p> -->
 
               <div class="carousel-wrapper">
-                <div class="t carousel">
+<!--                 <div class="t carousel">
                   <a class="carousel-item" href="#one!"><img src="https://cdn.shopify.com/s/files/1/1775/8583/t/1/assets/geometric-sun.jpg?0" crossOrigin="anonymous"></a>
                   <a class="carousel-item" href="#two!"><img src="https://cdn.shopify.com/s/files/1/1775/8583/t/1/assets/geometric-maze.jpg?0" crossOrigin="anonymous"></a>
                   <a class="carousel-item" href="#three!"><img src="https://cdn.shopify.com/s/files/1/1775/8583/t/1/assets/geometric-ice.jpg?0" crossOrigin="anonymous"></a>
                   <a class="carousel-item" href="#four!"><img src="https://cdn.shopify.com/s/files/1/1775/8583/t/1/assets/geometric-cave.jpg?0" crossOrigin="anonymous"></a>
                   <a class="carousel-item" href="#five!"><img src="https://cdn.shopify.com/s/files/1/1775/8583/t/1/assets/geometric-grapefruit.jpg?0" crossOrigin="anonymous"></a>
-                </div>
+                </div> -->
               </div>
             </div>
             <div class="gallery-action">
@@ -407,13 +407,13 @@ Baby, I really wanted to make your my love's birthday the much special, I just d
 <!-- Ea salvia adipisicing vegan man bun. Flexitarian cupidatat skateboard flannel. Drinking vinegar marfa you probably haven't heard of them consequat post-ironic, shabby chic williamsburg raclette vaporware readymade selfies brunch. Venmo selvage biodiesel marfa. Tbh literally 3 wolf moon, proident elit raclette chambray consequat edison bulb four loko accusamus. Semiotics godard eiusmod, ex esse air plant quinoa vaporware selfies keytar. Actually yuccie ennui flannel single-origin coffee, williamsburg cardigan banjo forage pug distillery tumblr hexagon vinyl occaecat.</p> -->
 
               <div class="carousel-wrapper">
-                <div class="t carousel">
+<!--                 <div class="t carousel">
                   <a class="carousel-item" href="#one!"><img src="https://cdn.shopify.com/s/files/1/1775/8583/t/1/assets/geometric-sun.jpg?0" crossOrigin="anonymous"></a>
                   <a class="carousel-item" href="#two!"><img src="https://cdn.shopify.com/s/files/1/1775/8583/t/1/assets/geometric-maze.jpg?0" crossOrigin="anonymous"></a>
                   <a class="carousel-item" href="#three!"><img src="https://cdn.shopify.com/s/files/1/1775/8583/t/1/assets/geometric-ice.jpg?0" crossOrigin="anonymous"></a>
                   <a class="carousel-item" href="#four!"><img src="https://cdn.shopify.com/s/files/1/1775/8583/t/1/assets/geometric-cave.jpg?0" crossOrigin="anonymous"></a>
                   <a class="carousel-item" href="#five!"><img src="https://cdn.shopify.com/s/files/1/1775/8583/t/1/assets/geometric-grapefruit.jpg?0" crossOrigin="anonymous"></a>
-                </div>
+                </div> -->
               </div>
             </div>
             <div class="gallery-action">
